response of POST /memberRegistration contains headers with location of created member and member id
